# kluster-server

./: Dockerfile  README.md  config.yaml  docker-compose.yaml  manage.py  pyproject.toml  run-debug.sh  run.sh  tmanage.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml
bridge/: admin.py  channel.py  enums.py  filters.py  gateway.py  inputs.py  models.py  scalars.py  types.py  urls.py
bridge/migrations/: 0001_initial.py
bridge/mutations/: __init__.py  cluster.py
bridge/queries/: __init__.py  dask_clusters.py  me.py
kluster_server/: __init__.py  asgi.py  schema.py  settings.py
tests/: test_pass.py
